reviewed points updates

--- a/about-us.html
+++ b/about-us.html
@@ -162,7 +162,9 @@
     <div>
       <div class="row px-4">
         <div class="col-sm-12">
-          <div class="ismv3-intro-banner"></div>
+          <div class="page-main-banner">
+            <h3>About ISM</h3>
+          </div>
         </div>
       </div>
     </div>
