--- a/career.html
+++ b/career.html
@@ -160,13 +160,15 @@
     <div class="">
       <div class="row px-4">
         <div class="col-sm-12">
-          <div class="ismv3-intro-banner"></div>
+          <div class="page-main-banner">
+            <h3>Careers</h3>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="about_section p-5">
+  <section class="p-5">
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-6">
