--- a/contact-us.html
+++ b/contact-us.html
@@ -162,7 +162,9 @@
     <div>
       <div class="row px-4">
         <div class="col-sm-12">
-          <div class="ismv3-intro-banner"></div>
+          <div class="page-main-banner">
+            <h3>Contact US</h3>
+          </div>
         </div>
       </div>
     </div>
@@ -190,7 +192,7 @@
                     Electronics Niketan , 6 CGO Complex, Lodhi Road, New Delhi-110003 India</td>
                   <td><a href="/">https://ism.gov.in</a>
                     <div class="qr-image"><img alt="QR code" class="img-fluid"
-                        src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/icons/qr_code.jpg"></div>
+                        src="./images/new_qr_image.png"></div>
                   </td>
                   <td><a href="mailto:ism-dic@gov.in">ism-dic@gov.in</a></td>
                   <td>011-24301865</td>
