--- a/design-link-scheme.html
+++ b/design-link-scheme.html
@@ -163,7 +163,7 @@
     <div>
       <div class="row px-4">
         <div class="col-sm-12">
-          <div class="ismv3-intro-banner design-link-scheme-banner"></div>
+          <div class="page-main-banner"><h3>Design Linked Incentive (DLI)</h3></div>
         </div>
       </div>
     </div>
