--- a/downloads.html
+++ b/downloads.html
@@ -162,19 +162,19 @@
     <div>
       <div class="row px-4">
         <div class="col-sm-12">
-          <div class="ismv3-intro-banner"></div>
+          <div class="page-main-banner"><h3>Downloads</h3></div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="p-5 ism-generic_tabbing ">
+  <section class="ism-generic_tabbing ">
     <div class="container-fluid">
       <div class="row">
         <div class="col-12">
         <div class="ism-generic_tabbing  v3">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
-          <li class="nav-item" role="presentation"><button aria-controls="current" aria-selected="true" class="nav-link active" data-bs-target="#current" data-bs-toggle="tab" id="current-tab" role="tab" type="button"><span>Current</span></button></li>
+          <li class="nav-item mr-3" role="presentation"><button aria-controls="current" aria-selected="true" class="nav-link active" data-bs-target="#current" data-bs-toggle="tab" id="current-tab" role="tab" type="button"><span>Current</span></button></li>
           <li class="nav-item" role="presentation"><button aria-controls="archive" aria-selected="false" class="nav-link" data-bs-target="#archive" data-bs-toggle="tab" id="archive-tab" role="tab" type="button"><span>Archive</span></button></li>
         </ul>
         
