--- a/our-team.html
+++ b/our-team.html
@@ -162,7 +162,7 @@
     <div>
       <div class="row px-4">
         <div class="col-sm-12">
-          <div class="ismv3-intro-banner"></div>
+          <div class="page-main-banner"><h3>Our Team</h3></div>
         </div>
       </div>
     </div>
