--- a/privacy-policies.html
+++ b/privacy-policies.html
@@ -23,12 +23,12 @@
       height: 1px;
       margin: 20px 0;
     }
-    .ismv3-intro-banner{
+    /* .page-main-banner{
   background-image: url(././images/banners/privacy-banner.webp);
   background-position: center;
   background-size: cover;
   height: 25vh;
-}
+} */
   </style>
 </head>
 
@@ -175,7 +175,9 @@
     <div>
       <div class="row px-4">
         <div class="col-sm-12">
-          <div class="ismv3-intro-banner"></div>
+          <div class="page-main-banner">
+            <h3>Privacy Policies</h3>
+          </div>
         </div>
       </div>
     </div>
