--- a/semiconductor-scheme.html
+++ b/semiconductor-scheme.html
@@ -163,7 +163,7 @@
     <div>
       <div class="row px-4">
         <div class="col-sm-12">
-          <div class="ismv3-intro-banner semiconductor-scheme-banner"></div>
+          <div class="page-main-banner"><h3>Semiconductor Fab</h3></div>
         </div>
       </div>
     </div>
