--- a/compound-scheme.html
+++ b/compound-scheme.html
@@ -163,7 +163,7 @@
     <div>
       <div class="row px-4">
         <div class="col-sm-12">
-          <div class="ismv3-intro-banner compound-scheme-banner"></div>
+          <div class="page-main-banner"><h3>Compound Semiconductor & Semiconductor ATMP</h3></div>
         </div>
       </div>
     </div>
