--- a/display-scheme.html
+++ b/display-scheme.html
@@ -163,7 +163,7 @@
     <div class="container-fluid">
       <div class="row px-4">
         <div class="col-sm-12">
-          <div class="ismv3-intro-banner display-scheme-banner"></div>
+          <div class="page-main-banner"><h3>Display Fab</h3></div>
         </div>
       </div>
     </div>
