--- a/gallery-details.html
+++ b/gallery-details.html
@@ -160,7 +160,7 @@
     <div class="">
       <div class="row px-4">
         <div class="col-sm-12">
-          <div class="ismv3-intro-banner"></div>
+          <div class="page-main-banner"><h3>Gallery Details</h3></div>
         </div>
       </div>
     </div>
