--- a/index.html
+++ b/index.html
@@ -822,11 +822,10 @@
           <div class="ism-footer-iframe mt-2">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.4426849656206!2d77.23733871489236!3d28.586493582435974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2fdedaabe87%3A0xadd98301faac65ce!2sElectronics%20Niketan%2C%20CGO%20Complex%2C%206%20Lodhi%20Road%2C%20Lodhi%20Rd%2C%20CGO%20Complex%2C%20Pragati%20Vihar%2C%20New%20Delhi%2C%20Delhi%20110003!5e0!3m2!1sen!2sin!4v1675947021093!5m2!1sen!2sin"
-              frameborder="0"></iframe>
+              frameborder="0" height="100%"></iframe>
           </div>
-          <div class="ism-footer-iframe mt-2 px-2">
-            <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/icons/qr_code_new.webp" alt=""
-              style="width:150px;height:150px;border-radius: 8px;">
+          <div class="ism-footer-iframe2 mt-2 px-2">
+            <img src="./images/new_qr_image.png" alt="">
           </div>
         </div>
       </div>
