--- a/sitemap.html
+++ b/sitemap.html
@@ -163,7 +163,9 @@
     <div>
       <div class="row px-4">
         <div class="col-sm-12">
-          <div class="ismv3-intro-banner"></div>
+          <div class="page-main-banner">
+            <h3>Sitemap</h3>
+          </div>
         </div>
       </div>
     </div>
