scheme page changes done

--- a/about-semicon.html
+++ b/about-semicon.html
@@ -195,11 +195,11 @@
               <img src="https://d37op362njfvp5.cloudfront.net/static/dist/images_2/banner/semi_2024_card.webp"
                 class="img-fluid br-8">
               <div class="event-content  py-3">
-                <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
+                <h3>SEMICON INDIA 2024 - Positioning India as a trusted partner in the global Semiconductor Supply Chain</h3>
+                <!-- <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
+                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p> -->
                 <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
+                      style="height:30px; width:30px;margin-right: 10px;"></span>Greater Noida, Uttar Pradesh</p>
               </div>
             </div>
           </a>
@@ -211,8 +211,8 @@
                 class="img-fluid br-8">
               <div class="event-content  py-3">
                 <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
+                <!-- <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
+                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p> -->
                 <p><span class=""><img src="images/icons/location_icon.png" alt=""
                       style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
               </div>
@@ -225,11 +225,11 @@
               <img src="https://d37op362njfvp5.cloudfront.net/static/dist/images_2/banner/SES_Thumbnail.webp"
                 class="img-fluid br-8">
               <div class="event-content py-3">
-                <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-                <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
+                <h3>SemiconIndia Conference 2022 - Catalyzing India’s Semiconductor Ecosystem</h3>
+                <!-- <p><span class=""><img src="images/icons/calendar_icon.png" alt=""
+                      style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p> -->
                 <p><span class=""><img src="images/icons/location_icon.png" alt=""
-                      style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
+                      style="height:30px; width:30px;margin-right: 10px;"></span>Bengaluru</p>
               </div>
             </div>
           </a>
