--- a/semiconductor-scheme.html
+++ b/semiconductor-scheme.html
@@ -316,18 +316,10 @@
   </section> -->
   <section>
     <div class="container my-5">
-      <p class="sub-heading">More Details</p>
+      <p class="main-heading">More About</p>
+      <p class="sub-heading">Display Fab Scheme</p>
       <div class="row">
-        <div class="accordion gc-wrapper mt-2 mb-4" id="accordionExample">
-          <div class="accordion-item ">
-            <h2 class="accordion-header" id="headingOne">
-              <button aria-controls="collapseOne" aria-expanded="false"
-                class="accordion-button collapsed" data-bs-target="#collapseOne" data-bs-toggle="collapse"
-                type="button"><span class="accordion-header_text">SemiConductor Fabs Scheme</span></button></h2>
-
-            <div aria-labelledby="headingOne" class="accordion-collapse collapse toggleAccordianDiv" id="collapseOne">
-              <div class="accordion-body">
-                <div class="gc-wrapper">
+                <div class="gc-wrapper py-4">
                 
                   <ul>
                     <li>Electronics permeates all sectors of the economy and the electronics industry has cross-cutting economic and strategic importance. Currently valued at around USD 2 Trillion (?150 lakh crore), the global electronics market is expected to grow significantly given the increasing penetration of emerging technologies including 5G, IoT, Artificial Intelligence, Robotics, Smart Mobility, Smart Manufacturing, etc.</li>
@@ -341,10 +333,7 @@
             
                 </div>
                 </div>
-            </div>
-          </div>
-      </div>
-      </div>
+
       <div class="row">
         <div class="col-sm">
           <div class="details-cards">
