--- a/compound-scheme.html
+++ b/compound-scheme.html
@@ -307,18 +307,10 @@
   </section> -->
   <section>
     <div class="container my-5">
-      <p class="sub-heading">More Details</p>
+    <p class="main-heading">More About</p>
+      <p class="sub-heading">Display Fab Scheme</p>
       <div class="row">
-        <div class="accordion gc-wrapper mt-2 mb-4" id="accordionExample">
-          <div class="accordion-item ">
-            <h2 class="accordion-header" id="headingOne">
-              <button aria-controls="collapseOne" aria-expanded="false"
-                class="accordion-button collapsed" data-bs-target="#collapseOne" data-bs-toggle="collapse"
-                type="button"><span class="accordion-header_text">Compound Scheme Scheme</span></button></h2>
-
-            <div aria-labelledby="headingOne" class="accordion-collapse collapse toggleAccordianDiv" id="collapseOne">
-              <div class="accordion-body">
-                <div class="gc-wrapper">
+                <div class="gc-wrapper py-4">
                   <ul>
                     <li>The electronics industry is the world’s largest and fastest growing industry with applications in all sectors of the economy. Semiconductors have been a key enabler in the advancement of electronics for the past 50 years and will continue to play an even greater role with the introduction of new applications including IoT, artificial intelligence, 5G, smart cars, smart factories, data centres, robotics, etc.</li>
                     <li>Semiconductor manufacturing is a complex and research-intensive sector, defined by rapid changes in technology which require significant and sustained investment. In the micro-electronics industry, integrated circuits (ICs) and discrete semiconductor devices are produced in a wafer Fabrication facility, commonly known as a Fab. Semiconductors are at the heart of electronic products and constitute a significant part of the Bill of Materials (BOM).</li>
@@ -328,10 +320,7 @@
                   </ul>
                 </div>
                 </div>
-            </div>
-          </div>
-      </div>
-      </div>
+
       <div class="row">
         <div class="col-sm">
           <div class="details-cards">
