--- a/design-link-scheme.html
+++ b/design-link-scheme.html
@@ -306,18 +306,10 @@
   </section> -->
   <section>
     <div class="container my-5">
-      <p class="sub-heading">More Details</p>
+      <p class="main-heading">More About</p>
+      <p class="sub-heading">Display Fab Scheme</p>
       <div class="row">
-        <div class="accordion gc-wrapper mt-2 mb-4" id="accordionExample">
-          <div class="accordion-item ">
-            <h2 class="accordion-header" id="headingOne">
-              <button aria-controls="collapseOne" aria-expanded="false"
-                class="accordion-button collapsed" data-bs-target="#collapseOne" data-bs-toggle="collapse"
-                type="button"><span class="accordion-header_text">Design Link Scheme</span></button></h2>
-
-            <div aria-labelledby="headingOne" class="accordion-collapse collapse toggleAccordianDiv" id="collapseOne">
-              <div class="accordion-body">
-                <div class="gc-wrapper">
+                <div class="gc-wrapper py-4">
                   <ul>
                     <li>
                         Semiconductors are at the heart of all electronic products and constitute a significant share in the Bill of Material (BOM). The National Policy on Electronics 2019 aims to position India as a global hub for Electronics System Design and Manufacturing (ESDM) and envisions creation of a vibrant semiconductor chip design ecosystem in the country. With an exceptional talent pool of 20% of world's semiconductor design engineers and thousands of chips designed by them every year in the country, India is poised
@@ -327,10 +319,7 @@
                 </ul>
                 </div>
                 </div>
-            </div>
-          </div>
-      </div>
-      </div>
+
       <div class="row">
         <div class="col-sm">
           <div class="details-cards">
