--- a/display-scheme.html
+++ b/display-scheme.html
@@ -163,7 +163,9 @@
     <div class="container-fluid">
       <div class="row px-4">
         <div class="col-sm-12">
-          <div class="page-main-banner"><h3>Display Fab</h3></div>
+          <div class="page-main-banner">
+            <h3>Display Fab</h3>
+          </div>
         </div>
       </div>
     </div>
@@ -188,7 +190,7 @@
           </div>
         </div>
       </div>
-    </div>    
+    </div>
   </section>
   <section class="p-5">
     <div class="container-fluid">
@@ -227,14 +229,14 @@
         <div class="col-8">
           <div class="text-right">
             <ul class="nav nav-tabs" id="myTab2" role="tablist"
-            style="justify-content: end;background: #F3F6FD;padding: 16px;border:none;display: inline-flex;background: #fff;border-radius: 8px;">
-            <li class="nav-item" role="presentation"><button aria-controls="photos" aria-selected="true"
-                class="nav-link active" data-bs-target="#photos" data-bs-toggle="tab" id="photos-tab" role="tab"
-                type="button"><span class="px-3">Current</span></button></li>
-            <li class="nav-item" role="presentation"><button aria-controls="videos" aria-selected="false"
-                class="nav-link" data-bs-target="#videos" data-bs-toggle="tab" id="videos-tab" role="tab"
-                type="button"><span class="px-3">Archives</span></button></li>
-          </ul>
+              style="justify-content: end;background: #F3F6FD;padding: 16px;border:none;display: inline-flex;background: #fff;border-radius: 8px;">
+              <li class="nav-item" role="presentation"><button aria-controls="photos" aria-selected="true"
+                  class="nav-link active" data-bs-target="#photos" data-bs-toggle="tab" id="photos-tab" role="tab"
+                  type="button"><span class="px-3">Current</span></button></li>
+              <li class="nav-item" role="presentation"><button aria-controls="videos" aria-selected="false"
+                  class="nav-link" data-bs-target="#videos" data-bs-toggle="tab" id="videos-tab" role="tab"
+                  type="button"><span class="px-3">Archives</span></button></li>
+            </ul>
           </div>
         </div>
       </div>
@@ -245,12 +247,16 @@
             <div class="row ism-elem10_wrap m-0">
               <div class="col-12">
                 <div class="notification-tabs d-flex align-content-center br-8">
-                  <div class="notification-icon"><img src="images/notification_icon.png" alt="" style="height:40px; width:40px;"></div>
-                  <div class="notification-text align-content-center">Revised Guidelines for effective functioning of the
-                    Modified scheme for setting up of Compound Semiconductors / Silicon Photonics / Sensors Fab. 11/10/2024
+                  <div class="notification-icon"><img src="images/notification_icon.png" alt=""
+                      style="height:40px; width:40px;"></div>
+                  <div class="notification-text align-content-center">Revised Guidelines for effective functioning of
+                    the
+                    Modified scheme for setting up of Compound Semiconductors / Silicon Photonics / Sensors Fab.
+                    11/10/2024
                     <span class="notification-date"></span>
                   </div>
-                  <div class="notification-icon ml-auto"><img src="images/icons/read_more_icon.png" alt="" style="height:40px; width:40px;"></div>
+                  <div class="notification-icon ml-auto"><img src="images/icons/read_more_icon.png" alt=""
+                      style="height:40px; width:40px;"></div>
                 </div>
               </div>
             </div>
@@ -260,12 +266,16 @@
               <div class="row ism-elem10_wrap m-0">
                 <div class="col-12">
                   <div class="notification-tabs d-flex align-content-center br-8">
-                    <div class="notification-icon"><img src="images/notification_icon.png" alt="" style="height:40px; width:40px;"></div>
-                    <div class="notification-text align-content-center">Revised Guidelines for effective functioning of the
-                      Modified scheme for setting up of Compound Semiconductors / Silicon Photonics / Sensors Fab. 11/10/2024
+                    <div class="notification-icon"><img src="images/notification_icon.png" alt=""
+                        style="height:40px; width:40px;"></div>
+                    <div class="notification-text align-content-center">Revised Guidelines for effective functioning of
+                      the
+                      Modified scheme for setting up of Compound Semiconductors / Silicon Photonics / Sensors Fab.
+                      11/10/2024
                       <span class="notification-date"></span>
                     </div>
-                    <div class="notification-icon ml-auto"><img src="images/icons/read_more_icon.png" alt="" style="height:40px; width:40px;"></div>
+                    <div class="notification-icon ml-auto"><img src="images/icons/read_more_icon.png" alt=""
+                        style="height:40px; width:40px;"></div>
                   </div>
                 </div>
               </div>
@@ -275,80 +285,56 @@
       </div>
     </div>
   </section>
-  <!-- <section>
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="accordion gc-wrapper" id="accordionExample">
-            <div class="accordion-item ">
-              <h2 class="accordion-header" id="headingOne">
-                <button aria-controls="collapseOne" aria-expanded="false"
-                  class="accordion-button collapsed" data-bs-target="#collapseOne" data-bs-toggle="collapse"
-                  type="button"><span class="main-heading">Display Fabs Scheme</span></button></h2>
 
-              <div aria-labelledby="headingOne" class="accordion-collapse collapse toggleAccordianDiv" id="collapseOne">
-                <div class="accordion-body">
-                  <div class="gc-wrapper">
-                  <ul>
-                    <li>Electronics permeates all sectors of the economy and the electronics industry has cross-cutting economic and strategic importance. Currently valued at around USD 2 Trillion (?150 lakh crore), the global electronics market is expected to grow significantly given the increasing penetration of emerging technologies including 5G, IoT, Artificial Intelligence, Robotics, Smart Mobility, Smart Manufacturing, etc.</li>
-                    <li>The vision of National Policy on Electronics 2019 (NPE 2019) is to position India as a global hub for Electronics System Design and Manufacturing (ESDM) and create an enabling environment for the industry to compete globally. One of the main strategies of NPE 2019 is to facilitate setting up of display fabrication facilities.</li>
-                    <li>Expenditure Finance Committee shall determine the structure and quantum of fiscal support to be provided under the scheme in consultation with Ministry of Electronics and Information Technology and the Nodal Agency.</li>
-                    <li>In case of fiscal support being provided as equity either in part or in full, Government of India’s share will not exceed 49% of total project equity.</li>
-                    <li>Additional financial support, if any, offered by the State Government or any of its agencies or local bodies may also be availed.</li>
-                  </ul>
-                  </div>
-                  </div>
-              </div>
-            </div>
-        </div>
-      </div>
-    </div>
-    </div>
-  </section> -->
   <section>
     <div class="container my-5">
-      <p class="sub-heading">More Details</p>
+      <p class="main-heading">More About</p>
+      <p class="sub-heading">Display Fab Scheme</p>
       <div class="row">
-        <div class="accordion gc-wrapper mt-2 mb-4" id="accordionExample">
-          <div class="accordion-item ">
-            <h2 class="accordion-header" id="headingOne">
-              <button aria-controls="collapseOne" aria-expanded="false"
-                class="accordion-button collapsed" data-bs-target="#collapseOne" data-bs-toggle="collapse"
-                type="button"><span class="accordion-header_text">Display Fabs Scheme</span></button></h2>
-
-            <div aria-labelledby="headingOne" class="accordion-collapse collapse toggleAccordianDiv" id="collapseOne">
-              <div class="accordion-body">
-                <div class="gc-wrapper">
-                <ul>
-                  <li>Electronics permeates all sectors of the economy and the electronics industry has cross-cutting economic and strategic importance. Currently valued at around USD 2 Trillion (?150 lakh crore), the global electronics market is expected to grow significantly given the increasing penetration of emerging technologies including 5G, IoT, Artificial Intelligence, Robotics, Smart Mobility, Smart Manufacturing, etc.</li>
-                  <li>The vision of National Policy on Electronics 2019 (NPE 2019) is to position India as a global hub for Electronics System Design and Manufacturing (ESDM) and create an enabling environment for the industry to compete globally. One of the main strategies of NPE 2019 is to facilitate setting up of display fabrication facilities.</li>
-                  <li>Expenditure Finance Committee shall determine the structure and quantum of fiscal support to be provided under the scheme in consultation with Ministry of Electronics and Information Technology and the Nodal Agency.</li>
-                  <li>In case of fiscal support being provided as equity either in part or in full, Government of India’s share will not exceed 49% of total project equity.</li>
-                  <li>Additional financial support, if any, offered by the State Government or any of its agencies or local bodies may also be availed.</li>
-                </ul>
-                </div>
-                </div>
-            </div>
-          </div>
-      </div>
+        <div class="gc-wrapper py-4">
+          <ul>
+            <li>Electronics permeates all sectors of the economy and the electronics industry has cross-cutting economic
+              and strategic importance. Currently valued at around USD 2 Trillion (?150 lakh crore), the global
+              electronics market is expected to grow significantly given the increasing penetration of emerging
+              technologies including 5G, IoT, Artificial Intelligence, Robotics, Smart Mobility, Smart Manufacturing,
+              etc.</li>
+            <li>The vision of National Policy on Electronics 2019 (NPE 2019) is to position India as a global hub for
+              Electronics System Design and Manufacturing (ESDM) and create an enabling environment for the industry to
+              compete globally. One of the main strategies of NPE 2019 is to facilitate setting up of display
+              fabrication facilities.</li>
+            <li>Expenditure Finance Committee shall determine the structure and quantum of fiscal support to be provided
+              under the scheme in consultation with Ministry of Electronics and Information Technology and the Nodal
+              Agency.</li>
+            <li>In case of fiscal support being provided as equity either in part or in full, Government of India’s
+              share will not exceed 49% of total project equity.</li>
+            <li>Additional financial support, if any, offered by the State Government or any of its agencies or local
+              bodies may also be availed.</li>
+          </ul>
+        </div>
       </div>
       <div class="row">
         <div class="col-sm">
           <div class="details-cards">
             <div class="details-cards_title">Objective</div>
-            <div class="details-cards_content">To attract large investments for setting up semiconductor wafer fabrication facilities in the country to strengthen the electronics manufacturing ecosystem and help establish a trusted value chain.            </div>
+            <div class="details-cards_content">To attract large investments for setting up semiconductor wafer
+              fabrication facilities in the country to strengthen the electronics manufacturing ecosystem and help
+              establish a trusted value chain. </div>
           </div>
         </div>
         <div class="col-sm">
           <div class="details-cards">
             <div class="details-cards_title">Eligibility</div>
-            <div class="details-cards_content">Companies / Consortia / Joint Ventures proposing to set up a Silicon CMOS based Semiconductor Fab in India for manufacturing Logic / Memory / Digital ICs / Analog ICs / Mixed Signal ICs / SoCs            </div>
+            <div class="details-cards_content">Companies / Consortia / Joint Ventures proposing to set up a Silicon CMOS
+              based Semiconductor Fab in India for manufacturing Logic / Memory / Digital ICs / Analog ICs / Mixed
+              Signal ICs / SoCs </div>
           </div>
         </div>
         <div class="col-sm">
           <div class="details-cards">
             <div class="details-cards_title">Tenure of the Scheme </div>
-            <div class="details-cards_content">Support under the scheme shall be provided for a period of six years. The tenure of the actual fiscal support outflow may be extended based on the approval of the Minister of Electronics and Information Technology.
+            <div class="details-cards_content">Support under the scheme shall be provided for a period of six years. The
+              tenure of the actual fiscal support outflow may be extended based on the approval of the Minister of
+              Electronics and Information Technology.
             </div>
           </div>
         </div>
@@ -369,7 +355,7 @@
               <div class="scheme-apply-cards_content-box_heading">
                 <p>Submission of relevant information to register with ISM and submit application</p>
               </div>
-            </div>           
+            </div>
           </div>
         </div>
         <div class="col-sm">
@@ -382,7 +368,7 @@
               <div class="scheme-apply-cards_content-box_heading">
                 <p>Submission of relevant information to register with ISM and submit application</p>
               </div>
-            </div>           
+            </div>
           </div>
         </div>
         <div class="col-sm">
@@ -395,7 +381,7 @@
               <div class="scheme-apply-cards_content-box_heading">
                 <p>Submission of relevant information to register with ISM and submit application</p>
               </div>
-            </div>           
+            </div>
           </div>
         </div>
         <div class="col-sm">
@@ -411,7 +397,7 @@
               <div class="scheme-apply-cards_content-box__sub-heading">
                 <p>Submission of relevant information to register with ISM and submit application</p>
               </div>
-            </div>           
+            </div>
           </div>
         </div>
       </div>
