all feedback points

--- a/semiconductor-scheme.html
+++ b/semiconductor-scheme.html
@@ -88,8 +88,8 @@
             <div class="dropdown-menu" aria-labelledby="aboutDropdown">
               <a class="dropdown-item" href="/our-ministers.html">Our Ministers</a>
               <a class="dropdown-item" href="/about-us.html">About ISM</a>
-              <a class="dropdown-item" href="/ism-vision.html">ISM Vision and Objectives</a>
-              <a class="dropdown-item" href="/our-team.html">ISM Team</a>
+              <a class="dropdown-item" href="/ism-vision.html">Vision and Objectives</a>
+              <a class="dropdown-item" href="/our-team.html">Our Team</a>
               <a class="dropdown-item" href="/ism-commitee.html">ISM Committee</a>
               <a class="dropdown-item" href="/advisory-commitee.html">Advisory Committee</a>
               <a class="dropdown-item" href="/useful-links.html">Useful Links</a>
@@ -102,7 +102,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="semiconDropdown">
               <a class="dropdown-item" href="/about-semicon.html">About SemiconIndia</a>
-              <a class="dropdown-item" href="https://ism.gov.in/semicon-2024.html">SemiconIndia 2024</a>
+              <a class="dropdown-item" href="https://ism.gov.in/semicon-2024.html">SEMICON INDIA 2024</a>
               <a class="dropdown-item" href="https://ism.gov.in/semicon2023.html">SemiconIndia 2023</a>
               <a class="dropdown-item" href="https://ism.gov.in/semicon2022.html">SemiconIndia 2022</a>
             </div>
@@ -244,16 +244,24 @@
             <div class="row ism-elem10_wrap m-0">
               <div class="col-12">
                 <div class="notification-tabs d-flex align-content-center br-8">
-                  <div class="notification-icon"><img src="images/notification_icon.png" alt=""
-                      style="height:40px; width:40px;"></div>
-                  <div class="notification-text align-content-center">Revised Guidelines for effective functioning of
-                    the
-                    Modified scheme for setting up of Compound Semiconductors / Silicon Photonics / Sensors Fab.
-                    11/10/2024
-                    <span class="notification-date"></span>
+                  <div class="notification-icon">
+                    <img src="images/notification_icon.png" alt="" style="height:40px; width:40px;">
                   </div>
-                  <div class="notification-icon ml-auto"><img src="images/icons/read_more_icon.png" alt=""
-                      style="height:40px; width:40px;"></div>
+                  <div class="notification-text align-content-center">Guidelines for Modified Scheme for setting up of Semiconductor Fabs in India
+                    <span class="notification-date">29 May, 2023</span>
+                  </div>
+                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2023/May/31/1685527229_Guidelines_for_Modified_Scheme_for_setting_up_of_Semiconductor_Fabs_in_India.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
+                    style="height:40px; width:40px;"></span></div>
+                </div>
+                <div class="notification-tabs d-flex align-content-center br-8">
+                  <div class="notification-icon">
+                    <img src="images/notification_icon.png" alt="" style="height:40px; width:40px;">
+                  </div>
+                  <div class="notification-text align-content-center">Modified Scheme for setting up of Semiconductor Fabs in India
+                    <span class="notification-date">4 October, 2022</span>
+                  </div>
+                  <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/Oct/07/1665119978_Notification_Modified_Scheme_for_Semiconductor_Fabs.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
+                    style="height:40px; width:40px;"></span></div>
                 </div>
               </div>
             </div>
@@ -265,14 +273,20 @@
                   <div class="notification-tabs d-flex align-content-center br-8">
                     <div class="notification-icon"><img src="images/notification_icon.png" alt=""
                         style="height:40px; width:40px;"></div>
-                    <div class="notification-text align-content-center">Revised Guidelines for effective functioning of
-                      the
-                      Modified scheme for setting up of Compound Semiconductors / Silicon Photonics / Sensors Fab.
-                      11/10/2024
-                      <span class="notification-date"></span>
+                    <div class="notification-text align-content-center">Guidelines for Scheme for setting up of Semiconductor Fabs in India
+                      <span class="notification-date">30 December, 2021</span>
                     </div>
-                    <div class="notification-icon ml-auto"><img src="images/icons/read_more_icon.png" alt=""
+                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651756298_guidelines_semiconductor_fab.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
+                      style="height:40px; width:40px;"></span></div>
+                  </div>
+                  <div class="notification-tabs d-flex align-content-center br-8">
+                    <div class="notification-icon"><img src="images/notification_icon.png" alt=""
                         style="height:40px; width:40px;"></div>
+                    <div class="notification-text align-content-center">Scheme for setting up of Semiconductor Fabs in India
+                      <span class="notification-date">21 December, 2021</span>
+                    </div>
+                    <div class="notification-icon ml-auto"><a href="https://d2p5j06zete1i7.cloudfront.net/Cms/2022/May/05/1651758241_notification_semiconductor_fabs.pdf">Download</a><span><img src="images/icons/read_more_icon.png" alt=""
+                      style="height:40px; width:40px;"></span></div>
                   </div>
                 </div>
               </div>
@@ -317,7 +331,8 @@
   <section>
     <div class="container my-5">
       <p class="main-heading">More About</p>
-      <p class="sub-heading">Display Fab Scheme</p>
+      <p class="sub-heading">Semiconductor Fab
+        Scheme</p>
       <div class="row">
                 <div class="gc-wrapper py-4">
                 
@@ -375,7 +390,8 @@
             </div>
             <div class="scheme-apply-cards_content-box">
               <div class="scheme-apply-cards_content-box_heading">
-                <p>Submission of relevant information to register with ISM and submit application</p>
+                <p>Submission of relevant information to register with ISM and submit application
+                </p>
               </div>
             </div>           
           </div>
@@ -388,7 +404,8 @@
             </div>
             <div class="scheme-apply-cards_content-box">
               <div class="scheme-apply-cards_content-box_heading">
-                <p>Submission of relevant information to register with ISM and submit application</p>
+                <p>Detailed Project Report
+                </p>
               </div>
             </div>           
           </div>
@@ -401,7 +418,12 @@
             </div>
             <div class="scheme-apply-cards_content-box">
               <div class="scheme-apply-cards_content-box_heading">
-                <p>Submission of relevant information to register with ISM and submit application</p>
+                <p>Application fee as per Scheme and Guidelines.
+                </p>
+              </div>
+              <div class="scheme-apply-cards_content-box__sub-heading">
+                <p>*Fee shall be inclusive of GST however the transaction charges are to be borne by the Applicant independently
+                </p>
               </div>
             </div>           
           </div>
@@ -414,11 +436,10 @@
             </div>
             <div class="scheme-apply-cards_content-box">
               <div class="scheme-apply-cards_content-box_heading">
-                <p>Submission of relevant information to register with ISM and submit application</p>
+                <p>The tenure of the fiscal support shall be for a period of 6 years
+                </p>
               </div>
-              <div class="scheme-apply-cards_content-box__sub-heading">
-                <p>Submission of relevant information to register with ISM and submit application</p>
-              </div>
+             
             </div>           
           </div>
         </div>
@@ -444,7 +465,7 @@
             <li><a href="website-policies.html"><img src="images/footer/website_policy_icon.png" alt="">Website
                 Policies</a></li>
             <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy
-                Policies</a></li>
+                Policy</a></li>
             <li><a href="/career.html"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
             <li><a href="/faqs.html"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
           </ul>
@@ -475,13 +496,14 @@
         </ul>
         <div class="d-flex">
           <div class="ism-footer-iframe mt-2">
-            <iframe
+               <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.4426849656206!2d77.23733871489236!3d28.586493582435974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2fdedaabe87%3A0xadd98301faac65ce!2sElectronics%20Niketan%2C%20CGO%20Complex%2C%206%20Lodhi%20Road%2C%20Lodhi%20Rd%2C%20CGO%20Complex%2C%20Pragati%20Vihar%2C%20New%20Delhi%2C%20Delhi%20110003!5e0!3m2!1sen!2sin!4v1675947021093!5m2!1sen!2sin"
-              frameborder="0"></iframe>
+              frameborder="0" height="100%"></iframe>
           </div>
-          <div class="ism-footer-iframe mt-2 px-2">
-            <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/icons/qr_code_new.webp" alt=""
-              style="width:150px;height:150px;border-radius: 8px;">
+           <div class="ism-footer-iframe2 mt-2 mx-2 px-2">
+
+            <img src="./images/new_qr_image.png" alt="">
+
           </div>
         </div>
       </div>
