--- a/privacy-policies.html
+++ b/privacy-policies.html
@@ -100,8 +100,8 @@
             <div class="dropdown-menu" aria-labelledby="aboutDropdown">
               <a class="dropdown-item" href="/our-ministers.html">Our Ministers</a>
               <a class="dropdown-item" href="/about-us.html">About ISM</a>
-              <a class="dropdown-item" href="/ism-vision.html">ISM Vision and Objectives</a>
-              <a class="dropdown-item" href="/our-team.html">ISM Team</a>
+              <a class="dropdown-item" href="/ism-vision.html">Vision and Objectives</a>
+              <a class="dropdown-item" href="/our-team.html">Our Team</a>
               <a class="dropdown-item" href="/ism-commitee.html">ISM Committee</a>
               <a class="dropdown-item" href="/advisory-commitee.html">Advisory Committee</a>
               <a class="dropdown-item" href="/useful-links.html">Useful Links</a>
@@ -114,7 +114,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="semiconDropdown">
               <a class="dropdown-item" href="/about-semicon.html">About SemiconIndia</a>
-              <a class="dropdown-item" href="https://ism.gov.in/semicon-2024.html">SemiconIndia 2024</a>
+              <a class="dropdown-item" href="https://ism.gov.in/semicon-2024.html">SEMICON INDIA 2024</a>
               <a class="dropdown-item" href="https://ism.gov.in/semicon2023.html">SemiconIndia 2023</a>
               <a class="dropdown-item" href="https://ism.gov.in/semicon2022.html">SemiconIndia 2022</a>
             </div>
@@ -224,7 +224,7 @@
           <ul>
             <li><a href="sitemap.html"><img src="images/footer/sitemap_icon.png" alt="">Sitemap</a></li>
             <li><a href="website-policies.html"><img src="images/footer/website_policy_icon.png" alt="">Website Policies</a></li>
-            <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy Policies</a></li>
+            <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy Policy</a></li>
             <li><a href="/career.html"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
             <li><a href="/faqs.html"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
           </ul>
@@ -255,13 +255,14 @@
         </ul>
         <div class="d-flex">
           <div class="ism-footer-iframe mt-2">
-            <iframe
+               <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.4426849656206!2d77.23733871489236!3d28.586493582435974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2fdedaabe87%3A0xadd98301faac65ce!2sElectronics%20Niketan%2C%20CGO%20Complex%2C%206%20Lodhi%20Road%2C%20Lodhi%20Rd%2C%20CGO%20Complex%2C%20Pragati%20Vihar%2C%20New%20Delhi%2C%20Delhi%20110003!5e0!3m2!1sen!2sin!4v1675947021093!5m2!1sen!2sin"
-              frameborder="0"></iframe>
+              frameborder="0" height="100%"></iframe>
           </div>
-          <div class="ism-footer-iframe mt-2 px-2">
-            <img src="https://d2p5j06zete1i7.cloudfront.net/static/dist/images_2/icons/qr_code_new.webp" alt=""
-              style="width:150px;height:150px;border-radius: 8px;">
+           <div class="ism-footer-iframe2 mt-2 mx-2 px-2">
+
+            <img src="./images/new_qr_image.png" alt="">
+
           </div>
         </div>
       </div>
